# fortune_pico

./: .gitmodules  CMakeLists.txt
headers/: display.h  joystick.h
src/: display.c  joystick.c  main.c  maine.c  mainl.c
